# cedar-resource-server-application/src/main/java/org/metadatacenter/cedar/resource/resources/SearchResource.java
@@ -3,6 +3,8 @@ package org.metadatacenter.cedar.resource.resources;
 import com.codahale.metrics.annotation.Timed;
 import io.swagger.v3.oas.annotations.Operation;
 import io.swagger.v3.oas.annotations.Parameter;
+import io.swagger.v3.oas.annotations.media.Content;
+import io.swagger.v3.oas.annotations.media.Schema;
 import io.swagger.v3.oas.annotations.responses.ApiResponse;
 import io.swagger.v3.oas.annotations.responses.ApiResponses;
 import io.swagger.v3.oas.annotations.security.SecurityRequirement;
@@ -38,7 +40,8 @@ public class SearchResource extends AbstractSearchResource {
           + "combinations will work. You can see the type of the executed search in the response body.", tags = {"Search", "Template Fields", "Template Elements", "Templates", "Template Instances", "Folders",
           "Folder Contents", "Versioning"})
   @ApiResponses({
-      @ApiResponse(responseCode = "200", description = "Successful operation"),
+      @ApiResponse(responseCode = "200", description = "A page of resources matching the search",
+          content = @Content(schema = @Schema(ref = "#/components/schemas/ResourceListResponse"))),
       @ApiResponse(responseCode = "400", description = "Bad request"),
       @ApiResponse(responseCode = "401", description = "Unauthorized"),
       @ApiResponse(responseCode = "403", description = "Forbidden"),
